[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caching-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "build>=1.3.0",
    "celery>=5.5.3",
    "django>=5.2.8",
    "djangorestframework>=3.16.1",
    "httpx>=0.28.1",
    "redis[hiredis]>=7.1.0",
]

[project.scripts]
caching-proxy = "config.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["config", "proxy_cache"]
